fix(02-08): revise plan based on checker feedback

--- a/.planning/phases/02-authentication-security/02-08-PLAN.md
+++ b/.planning/phases/02-authentication-security/02-08-PLAN.md
@@ -8,6 +8,7 @@ files_modified:
   - frontend/app/dashboard/page.tsx
   - frontend/app/(auth)/login/page.tsx
   - backend/src/auth/auth.controller.ts
+  - backend/src/auth/middleware/absolute-session-expiry.middleware.ts
 autonomous: true
 gap_closure: true
 
@@ -26,6 +27,9 @@ must_haves:
     - path: "backend/src/auth/auth.controller.ts"
       provides: "Login endpoint with 7-day default session only"
       min_lines: 250
+    - path: "backend/src/auth/middleware/absolute-session-expiry.middleware.ts"
+      provides: "Session expiry middleware using constant 7-day maxAge"
+      min_lines: 15
   key_links:
     - from: "frontend/app/dashboard/page.tsx"
       to: "backend /auth/me"
@@ -58,6 +62,7 @@ Output: Dashboard shows "Welcome, [FirstName] [LastName]!" and login page has no
 @frontend/app/dashboard/page.tsx
 @frontend/app/(auth)/login/page.tsx
 @backend/src/auth/auth.controller.ts
+@backend/src/auth/middleware/absolute-session-expiry.middleware.ts
 @backend/src/auth/strategies/session.serializer.ts
 @backend/src/users/users.service.ts
 </context>
@@ -165,6 +170,8 @@ await authAPI.login({ email, password });
 - No checkbox in UI
 - Login form only passes email and password to backend
 - Forgot password link remains (right-aligned, above submit button)
+
+**Note on authAPI.login type signature:** The backend LoginDto still accepts rememberMe as an optional field for backward compatibility, so TypeScript won't error when we remove it from the call. The backend simply ignores the rememberMe field if it's not provided.
   </action>
   <verify>
 Run `cd frontend && npm run build` - should compile without errors.
@@ -178,16 +185,16 @@ Login page has no "Remember Me" checkbox. Login form only sends email and passwo
 </task>
 
 <task type="auto">
-  <name>Task 3: Update backend login endpoint to always use 7-day session (remove 30-day rememberMe logic)</name>
-  <files>backend/src/auth/auth.controller.ts</files>
+  <name>Task 3: Update backend login endpoint and middleware to always use 7-day session (remove 30-day rememberMe logic)</name>
+  <files>backend/src/auth/auth.controller.ts, backend/src/auth/middleware/absolute-session-expiry.middleware.ts</files>
   <action>
 **Root cause analysis:**
-- Current: rememberMe extends cookie maxAge from 7 days to 30 days
+- Current: rememberMe extends cookie maxAge from 7 days to 30 days in auth.controller.ts
+- Current: absolute-session-expiry.middleware.ts also checks rememberMe to enforce 7-day vs 30-day absolute expiry
 - Requested: Everyone gets 7-day session (no 30-day extension)
-- Backend currently expects rememberMe boolean and extends session if true
+- After removing rememberMe from login endpoint, the middleware's conditional logic becomes dead code
 
-**Fix:**
-Remove rememberMe logic from login endpoint:
+**Fix 1: auth.controller.ts - Remove rememberMe logic from login endpoint:**
 
 ```typescript
 // Lines 74-81 - REMOVE rememberMe session flag and cookie extension:
@@ -206,7 +213,7 @@ Remove rememberMe logic from login endpoint:
         (req.session as any).createdAt = Date.now();
 ```
 
-**Result:**
+**Result for auth.controller.ts:**
 - All sessions use default 7-day duration (configured in session middleware)
 - No rememberMe flag stored in session
 - createdAt still tracked for absolute expiry enforcement (from 02-06-PLAN.md)
@@ -217,19 +224,41 @@ Remove rememberMe logic from login endpoint:
 **Same fix applies to OAuth callbacks:**
 In googleAuthCallback (line 213) and linkedinAuthCallback (line 244), remove any rememberMe logic if present. Both callbacks only set createdAt, which is correct - keep that.
 
-**Verification after implementation:**
-- Session cookie maxAge defaults to 7 days (controlled by session middleware config in 02-01-PLAN.md)
-- No rememberMe flag in session object
-- No conditional 30-day extension logic
+**Fix 2: absolute-session-expiry.middleware.ts - Remove conditional rememberMe logic:**
+
+Currently the middleware (lines 7-9) checks `req.session.rememberMe` to determine maxAge:
+```typescript
+const maxAge = req.session.rememberMe
+  ? 30 * 24 * 60 * 60 * 1000 // 30 days absolute max with "remember me"
+  : 7 * 24 * 60 * 60 * 1000; // 7 days absolute max default
+```
+
+After removing rememberMe from login, this becomes dead code. Update to use constant 7-day maxAge:
+
+```typescript
+// Lines 7-9 - Change from:
+      const maxAge = req.session.rememberMe
+        ? 30 * 24 * 60 * 60 * 1000 // 30 days absolute max with "remember me"
+        : 7 * 24 * 60 * 60 * 1000; // 7 days absolute max default
+
+// To:
+      const maxAge = 7 * 24 * 60 * 60 * 1000; // 7 days absolute max for all sessions
+```
+
+**Result for middleware:**
+- Always enforces 7-day absolute session expiry
+- No conditional logic based on rememberMe flag
+- Simpler, more maintainable code
   </action>
   <verify>
 Run `cd backend && npm run build` - should compile without errors.
-Check that login endpoint removes rememberMe session flag and cookie extension logic.
+Check that auth.controller.ts login endpoint removes rememberMe session flag and cookie extension logic.
 Check that only createdAt is set in session (for absolute expiry tracking).
 Check that OAuth callbacks also don't set rememberMe.
+Check that absolute-session-expiry.middleware.ts uses constant 7-day maxAge (no rememberMe conditional).
   </verify>
   <done>
-Backend login endpoint always creates 7-day sessions (no 30-day extension). rememberMe field removed from session object. Cookie maxAge defaults to 7 days for all users. createdAt still tracked for absolute session expiry enforcement. LoginDto.rememberMe field remains for backward compatibility but is ignored by backend.
+Backend login endpoint always creates 7-day sessions (no 30-day extension). rememberMe field removed from session object. Cookie maxAge defaults to 7 days for all users. createdAt still tracked for absolute session expiry enforcement. LoginDto.rememberMe field remains for backward compatibility but is ignored by backend. Absolute session expiry middleware now uses constant 7-day maxAge without conditional rememberMe logic.
   </done>
 </task>
 
@@ -255,7 +284,12 @@ After all tasks complete:
    - Cookie `connect.sid` should have ~7 days maxAge
    - NOT 30 days
 
-4. **End-to-end flow:**
+4. **Middleware behavior:**
+   - Check that absolute-session-expiry.middleware.ts has no rememberMe conditional logic
+   - maxAge is constant 7 days for all sessions
+   - Sessions older than 7 days are destroyed regardless of any rememberMe flag
+
+5. **End-to-end flow:**
    - Signup with new account (first name: "Linda", last name: "Ngwaluko")
    - Dashboard should show: "Welcome, Linda Ngwaluko!"
    - Logout and login again
@@ -268,6 +302,7 @@ UAT Gap 1 fully resolved:
 - Login page has no "Remember Me" checkbox
 - All users get 7-day session by default (no 30-day extension logic)
 - Session serializer properly returns firstName and lastName from database
+- Absolute session expiry middleware uses constant 7-day maxAge (no conditional logic)
 - User can login and see their name immediately on dashboard
 </success_criteria>
 
